Adds Abstract and Index section

--- a/8-Page-Conference-Paper/main.tex
+++ b/8-Page-Conference-Paper/main.tex
@@ -31,6 +31,23 @@
     
 \end{center}
 
+% Space between title section and abstract
+\vspace{1em}
+
+% Abstract Section
+{\fontsize{9pt}{10pt}\selectfont
+\setlength{\parindent}{0.125in}
+\textbf{\textit{Abstract}\ \ --- \ \ Use 9 point Times New Roman Bold font for the abstract. Set your line spacing to be 10 points rather than single space. Indent the first line by 0.125 inches and type the word “Abstract” in 9 point Times New Roman Bold Italic. This should be followed by two spaces, a long dash (option / shift / minus), two spaces, and then the first word of your abstract (as shown above). Please try to keep the length of your abstract to 100 words or less. Times font is an acceptable substitute for Times New Roman font. After the abstract, you should list a few key words from the IEEE approved “Index Terms” LIST that describe your paper. The index terms are used by automated IEEE search engines to quickly locate your paper. Typically, you should list about 5 to 7 key words, in alphabetical order, using 9 point Times New Roman Bold font. An example is shown next.}
+
+\vspace{0pt}
+
+\textbf{ \textit{Index Terms} \ \ --- \ \ Ceramics, coaxial resonators, delay filters, delay-lines, power amplifiers. }
+
+}
+
+% Space between abstract Intro
+\vspace{1em}
+
 \section{Introduction}
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vel lorem nec nisi luctus lobortis. Quisque ullamcorper finibus congue. Aliquam id quam neque. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis laoreet porttitor libero, eget vestibulum sem hendrerit vitae. Nulla pretium ipsum vitae nisl varius, consectetur auctor ante varius. Donec vel purus nec diam tristique blandit sit amet in neque. Vestibulum dapibus, ipsum in varius blandit, diam arcu cursus erat, eu luctus enim mi bibendum mi. Nunc porta tellus viverra laoreet commodo. Mauris mattis lacus vitae lorem eleifend tincidunt. Donec in tellus interdum, auctor risus fermentum, laoreet mi. Curabitur id enim metus. Sed convallis vulputate purus vel faucibus.
 
